--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".activity.RenkouActivity" />
         <activity android:name=".activity.MyWebActivity" />
         <activity android:name=".activity.GroupActivity" />
+        <activity android:name=".activity.SerachAddActivity" />
 
     </application>
 
