--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,9 @@ android {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
 }
-
+repositories {  //添加stetho-realm代码仓库地址
+    maven { url 'https://github.com/WickeDev/stetho-realm/raw/master/maven-repo' }
+}
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -65,5 +67,7 @@ dependencies {
     compile 'com.alibaba:fastjson:1.1.68.android'
     compile 'com.android.support:cardview-v7:26.+'
     compile 'com.android.support:recyclerview-v7:26.+'
+    compile 'com.facebook.stetho:stetho:1.5.0'
+    compile 'com.uphyca:stetho_realm:2.2.2'
     implementation 'com.facebook.fresco:fresco:1.8.1'
 }
