--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,5 @@ dependencies {
     compile 'com.facebook.stetho:stetho:1.5.0'
     compile 'com.uphyca:stetho_realm:2.2.2'
     implementation 'com.facebook.fresco:fresco:1.8.1'
+    implementation files('libs/jxl.jar')
 }
